# rusty_react_native

./: .gitignore  Makefile  MobileAppBridge.java  app.json  copy_android.sh  create-ndk-standalone.sh  package.json
rust/rusty_react_native/: Cargo.toml
rust/rusty_react_native/src/: main.rs
